# esp32-s3-touch-amoled-206-rust

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
app-core/: Cargo.toml
app-core/src/: buzz.rs  commands.rs  config.rs  data.rs  events.rs  lib.rs  log.rs  model.rs  nav.rs
app-core/src/ui/: fonts.rs  glyphs.rs  layout.rs  primitives.rs  theme.rs  types.rs
app-core/src/ui/screens/: alarm.rs  app_drawer.rs  clock.rs  mod.rs  notifications.rs  quick_access.rs  settings.rs  status.rs  stopwatch.rs  timer.rs
app-core/src/ui/widgets/: bodies.rs  chrome.rs  containers.rs  controls.rs  mod.rs  nightwatch.rs  numpad.rs  picker.rs  scrollable.rs  wheel.rs
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/display/: co5300.rs  mod.rs  qspi.rs
drivers/src/drv2605/: mod.rs
drivers/src/es7210/: mod.rs
drivers/src/es8311/: mod.rs
drivers/src/imu/: mod.rs  registers.rs  types.rs
drivers/src/pmu/: interrupts.rs  mod.rs  power_states.rs  registers.rs  types.rs
drivers/src/rtc/: mod.rs  types.rs
drivers/src/sdcard/: mod.rs
drivers/src/touch/: cst9217.rs  mod.rs
drivers/src/xl9555/: mod.rs
firmware/: Cargo.toml  large_littlefs_32MB.csv  memory.x
firmware-c6/: Cargo.toml  partitions-c6.csv  rust-toolchain.toml
firmware-c6/.cargo/: config.toml
firmware-c6/src/: board.rs  main.rs
firmware-c6/src/system/: mod.rs  power.rs
firmware-hal/: Cargo.toml
firmware-hal/src/: display.rs  lib.rs
firmware-s3/: Cargo.toml  partitions-s3.csv
firmware-s3/.cargo/: config.toml
firmware-s3/src/: board.rs  main.rs
firmware-s3/src/system/: display.rs  flash_fs.rs  manager.rs  mod.rs  power.rs
firmware-s3/src/system/tasks/: imu.rs  power.rs  touch.rs
firmware-twatch-ultra/: Cargo.toml  partitions-twatch-ultra.csv
firmware-twatch-ultra/.cargo/: config.toml
firmware-twatch-ultra/src/: board.rs  main.rs
firmware-twatch-ultra/src/system/: haptics.rs  mod.rs  power.rs
firmware/.cargo/: config.toml
firmware/src/: audio_hal.rs  board.rs  config.rs  display_hal.rs  events.rs  main.rs  sdcard_hal.rs
firmware/src/system/: audio.rs  bus.rs  display.rs  event_log.rs  flash_fs.rs  fs.rs  input.rs  manager.rs  mod.rs  nvs.rs  power.rs  sd_fs.rs  sensors.rs  storage.rs
firmware/src/system/tasks/: boot_button.rs  imu.rs  mod.rs  power.rs  rtc.rs  touch.rs
firmware/src/tasks/: heartbeat.rs
firmware/src/ui/: big_digits.rs  fonts.rs  frame.rs  glyphs.rs  layout.rs  mod.rs  panel.rs  primitives.rs  theme.rs  types.rs
firmware/src/ui/screens/: alarm.rs  clock.rs  corner_test.rs  mod.rs  panel.rs  settings.rs  status.rs  stopwatch.rs  timer.rs
firmware/src/ui/widgets/: bodies.rs  chrome.rs  containers.rs  mod.rs  numpad.rs
system-core/: Cargo.toml
system-core/src/: audio.rs  audio_hal.rs  board.rs  bus.rs  display.rs  event_log.rs  flash_fs.rs  fs.rs  lib.rs  manager.rs  sd_fs.rs  storage.rs
system-core/src/tasks/: boot_button.rs  imu.rs  mod.rs  power.rs  rtc.rs  touch.rs
