[workspace]
resolver = "2"
members = [
    "app-core",
    "drivers",
    "firmware-hal",
    "firmware-s3",
    "firmware-c6",
]
# firmware-c6 is excluded from default-members so `cargo build
# --workspace` at the root (which runs under the `esp` Xtensa
# toolchain) doesn't try to compile a RISC-V target with the wrong
# toolchain. Build it explicitly from inside firmware-c6/ - its own
# rust-toolchain.toml switches rustup to stable for that directory.
default-members = [
    "app-core",
    "drivers",
    "firmware-hal",
    "firmware-s3",
]

# Shared dependency versions - single source of truth to avoid mismatches.
[workspace.dependencies]
defmt                  = "0.3"
embedded-hal           = "1.0.0"
embedded-hal-async     = "1.0.0"
embedded-graphics-core = "0.4.1"
log                    = { version = "0.4.29", default-features = false }

[profile.dev]
opt-level     = "s"
codegen-units = 1
debug         = true

[profile.release]
opt-level     = "s"
codegen-units = 1
lto           = "fat"
# Keep debug symbols in ELF for espflash panic symbolication.
# They are stripped from the flash image automatically.
debug         = 2
