[package]
name    = "app-core"
version = "0.1.0"
edition = "2021"

# no_std by default; `std` feature enables standard-library impls for host tests.
[features]
default = []
std     = []
# Opt-in serde derives on value types the firmware persists to
# flash via `postcard`. Off by default so pure host tests stay
# dep-free.
serde = ["dep:serde"]

[dependencies]
defmt                  = { workspace = true, optional = true }
serde                  = { version = "1", default-features = false, features = ["derive"], optional = true }
embedded-graphics-core = { workspace = true }
embedded-graphics      = "0.8.2"

# Time value types (Duration, Instant) used by UI timer/stopwatch
# logic. Calling `Instant::now()` requires a hardware time driver,
# so app-core code should accept time as a parameter rather than
# fetch it, keeping logic host-testable.
embassy-time = "0.5.1"

# Static collections used by UI nav stack / screen state.
heapless = "0.9.2"

# U8g2 font wrapper for embedded-graphics. UI renders use this.
u8g2-fonts = "0.7.2"

# Driver-side value types carried inside system events and snapshot
# structs (e.g. `ChargerPhase`, `RtcDateTime`, `ImuData`). `defmt`
# default is disabled so optional logging doesn't leak into host
# builds.
drivers = { path = "../drivers", default-features = false, features = ["pmu", "rtc", "imu", "touch"] }

[dev-dependencies]
# Register a mock time driver so host tests that exercise code
# paths reaching `Instant::now()` (screens' on_event handlers,
# Model::handle_event dispatch) can link. Without this the test
# binary hits `_embassy_time_now` as an unresolved symbol.
embassy-time = { version = "0.5.1", features = ["mock-driver"] }
# `critical-section`'s std backend provides
# `_critical_section_*` implementations for host builds - the
# mock time driver takes locks internally.
critical-section = { version = "1.2", features = ["std"] }
