[package]
name    = "drivers"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt   = ["dep:defmt"]
display = []
imu     = []
pmu     = []
rtc     = []
touch   = []

[dependencies]
defmt              = { workspace = true, optional = true }
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-graphics-core = { workspace = true }

[dev-dependencies]
# Fake SPI/I2C buses for unit-testing drivers without hardware.
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
