[package]
name    = "drivers"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt   = ["dep:defmt"]
display = []
imu     = []
pmu     = []
rtc     = []
touch   = []
sdcard  = ["dep:embedded-sdmmc"]

[dependencies]
defmt              = { workspace = true, optional = true }
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-graphics-core = { workspace = true }
embedded-sdmmc    = { version = "0.8.2", optional = true }

[dev-dependencies]
# Fake SPI/I2C buses for unit-testing drivers without hardware.
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
