[package]
name    = "drivers"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt   = ["dep:defmt"]
display = []
imu     = []
pmu     = []
rtc     = []
touch   = []
sdcard  = ["dep:embedded-sdmmc"]
es8311  = []
es7210  = []
xl9555  = []
drv2605 = []
# CST92xx touch lives under the touch module (shares TouchEvent).
cst9217 = ["touch"]

[dependencies]
defmt              = { workspace = true, optional = true }
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-graphics-core = { workspace = true }
embedded-sdmmc    = { version = "0.8.2", optional = true }
# log macros are zero-cost when no logger is installed - safe to depend on
# from a no_std driver. Used to surface unrecoverable bus errors that would
# otherwise be swallowed by `.ok()` in the synchronous flush paths.
log                = { workspace = true }

[dev-dependencies]
# Fake SPI/I2C buses for unit-testing drivers without hardware.
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
