[package]
name    = "firmware-hal"
version = "0.1.0"
edition = "2021"

# Display HAL shared by the board bin crates: the esp-hal-coupled
# QSPI bus build, the CO5300 driver wrapper, init_display, and the
# framebuffer statics. The bin crates carry their own board.rs (pin
# maps) and main.rs (peripheral wiring) and call in here for display
# bring-up. The board-agnostic system layer + storage subsystem live
# in system-core.
#
# NOTE on esp-hal feature unification: this crate declares `esp-hal`
# with no chip feature - the leaf bin sets the chip feature and
# Cargo's feature unification carries that choice into this crate's
# build. The bins build independently from their own directories
# under different toolchains, so the chip features never coexist in
# one build.

[dependencies]
esp-hal      = { version = "1.1.0-rc.0", features = ["unstable"] }
embassy-time = { version = "0.5.1" }
embedded-hal = { workspace = true }
log          = { version = "0.4.29", default-features = false }

# `default-features = false` disables the drivers crate's `defmt` feature.
# `display` enables the CO5300 driver module that we wrap here.
drivers = { path = "../drivers", default-features = false, features = ["display"] }
