[package]
name    = "firmware-s3"
version = "0.1.0"
edition = "2021"

[[bin]]
name  = "firmware-s3"
path  = "src/main.rs"
test  = false
bench = false

# -- Board selection ---------------------------------------------------------
# Exactly one of these should be enabled. Board-specific layout
# constants (flash partition sizes, pin maps, etc.) key off them.
# The C6 port isn't active yet; `board-c6` exists so the
# filesystem constants compile in both shapes and the numbers
# show up next to each other.
[features]
default  = ["board-s3"]
board-s3 = []
board-c6 = []

[dependencies]
# --- Espressif bootloader descriptor (required by espflash to verify the image) ---
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

# --- Espressif HAL ---
esp-hal = { version = "1.1.0-rc.0", features = [
    "esp32s3",
    "unstable",     # required for many APIs in 1.x
] }
esp-rtos = { version = "0.3.0", features = [
    "esp32s3",
    "embassy",  # enables the async executor and time driver
] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = [
    "esp32s3",
    "log-04",           # bridges esp-println to the `log` 0.4 crate
] }

# --- Embassy async runtime ---
# Versions must match what esp-rtos 0.3.0 pulls in transitively:
# executor 0.10, sync 0.8. embassy-time is still 0.5.1 (uses the
# shared embassy-time-driver 0.2 / queue-utils 0.3 that esp-rtos
# depends on internally). embassy-futures is version-stable at 0.1.
embassy-executor = { version = "0.10" }
embassy-futures  = { version = "0.1" }
embassy-sync     = { version = "0.8" }
embassy-time     = { version = "0.5.1" }

# --- One-time static initialization for mutex/channel/bus ---
static_cell = "2.1"

# --- Logging ---
log = { version = "0.4.29", default-features = false }

# --- embedded-hal traits (used by drivers crate) ---
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus   = { version = "0.3.0" }

# --- Local crates ---
app-core     = { path = "../app-core",     features = ["serde"] }
drivers      = { path = "../drivers",      features = ["display", "imu", "pmu", "rtc", "touch", "sdcard", "es8311", "es7210"] }
firmware-hal = { path = "../firmware-hal" }

embedded-graphics-core = { workspace = true }
embedded-graphics      = "0.8.2"

# --- Larger / fancier fonts (u8g2 fonts wrapped for embedded-graphics) ---
u8g2-fonts = "0.7.2"

# --- Stack-allocated collections ---
heapless = "0.9.2"

# --- PSRAM heap allocator ---
esp-alloc = "0.10.0"

# --- Flash-backed persistence ---
# `esp-storage` exposes the flash chip through `embedded-storage`
# traits. `littlefs-rust` is a pure-Rust port of LittleFS that we
# run on top: one filesystem hosting config / alarms / event log /
# future audio assets and face definitions.
esp-storage         = { version = "0.9.0", features = ["esp32s3"] }
# embedded-storage: the NorFlash / ReadNorFlash traits that
# flash_fs.rs calls on esp_storage::FlashStorage.
embedded-storage    = "0.3.1"
littlefs-rust       = { version = "0.1.0" }
postcard            = { version = "1.1.3", default-features = false }
serde               = { version = "1", default-features = false, features = ["derive"] }
