[package]
name    = "firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name  = "firmware"
path  = "src/main.rs"
test  = false
bench = false

[dependencies]
# --- Espressif bootloader descriptor (required by espflash to verify the image) ---
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

# --- Espressif HAL ---
esp-hal = { version = "1.0.0", features = [
    "esp32s3",
    "unstable",     # required for many APIs in 1.0.x
    "psram",        # enables PSRAM support and .ext_ram.bss linker section
] }
esp-rtos = { version = "0.2.0", features = [
    "esp32s3",
    "embassy",  # enables the async executor and time driver
] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = [
    "esp32s3",
    "log-04",           # bridges esp-println to the `log` 0.4 crate
] }

# --- Embassy async runtime ---
embassy-executor = { version = "0.9" }
embassy-time = { version = "0.5.1" }

# --- Logging ---
log = { version = "0.4.29", default-features = false }

# --- embedded-hal traits (used by drivers crate) ---
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus   = { version = "0.3.0" }

# --- Local crates ---
app-core = { path = "../app-core" }
drivers  = { path = "../drivers", features = ["display", "imu", "pmu", "rtc", "touch", "sdcard", "es8311", "es7210"] }

embedded-graphics-core = { workspace = true }
embedded-graphics      = "0.8.2"

# --- Stack-allocated collections ---
heapless = "0.9.2"

# --- PSRAM heap allocator ---
esp-alloc = "0.9.0"
