[package]
name    = "system-core"
version = "0.1.0"
edition = "2021"

# Board-agnostic system brain shared by the board bin crates: the
# SystemManager event/render loop, the bus channels/signals, the
# peripheral tasks, the display state-transition helper, and the
# `Board` seam. Board-specific wiring (pin maps, peripheral
# construction, the `Board` impl) stays in the bin crates.
#
# Like firmware-hal, this crate declares `esp-hal` (and `esp-storage`)
# with NO chip feature - the leaf bin sets the chip feature and Cargo
# feature unification carries the choice into this crate's build. The
# bins build independently from their own directories under different
# toolchains, so the chip features never coexist in one build.
#
# No board-identity cfg features here: the flash-region geometry is
# passed in by the bin (which owns its partition CSV), not selected by
# a `cfg`. This crate stays board-agnostic.

[dependencies]
esp-hal      = { version = "1.1.0-rc.0", features = ["unstable"] }
embassy-executor = { version = "0.10" }
embassy-futures  = { version = "0.1" }
embassy-sync     = { version = "0.8" }
embassy-time     = { version = "0.5.1" }
embedded-hal       = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-bus   = { version = "0.3.0" }
embedded-graphics-core = { workspace = true }
embedded-graphics      = "0.8.2"
heapless     = "0.9.2"
log          = { workspace = true }
static_cell  = "2.1"
# `esp_alloc::HEAP` (read-only watermark) for the manager's periodic
# heap diagnostics. The bin owns the `#[global_allocator]`; `HEAP` is
# a shared static in this crate, so reading it here is fine.
esp-alloc    = "0.10.0"

# Storage subsystem deps (flash_fs / sd_fs / Store / event_log).
# Versions pinned to match the bin so Cargo dedupes a single copy.
# `esp-storage` carries no chip feature here - the leaf bin sets it
# and feature unification carries the choice into this build, same as
# the `esp-hal` pattern.
esp-storage      = { version = "0.9.0" }
embedded-storage = "0.3.1"
littlefs-rust    = { version = "0.1.0" }
postcard         = { version = "1.1.3", default-features = false }
serde            = { version = "1", default-features = false, features = ["derive"] }

# Local crates. app-core's `serde` feature must be on: the manager
# calls `store.load_blob::<Config>()` which needs `Config: Deserialize`.
app-core     = { path = "../app-core", features = ["serde"] }
drivers      = { path = "../drivers", default-features = false, features = [
    "display", "imu", "pmu", "rtc", "touch", "es8311", "es7210", "sdcard",
] }
firmware-hal = { path = "../firmware-hal" }
